@@ -454,6 +454,22 @@ AC_ARG_ENABLE(timeout-stalled,
     fi
   ])
 
+AC_ARG_ENABLE(transfer-buffer-size,
+  [AC_HELP_STRING(
+    [--enable-transfer-buffer-size],
+    [tune the the size (in bytes) of data transfer buffers (default=buffer size)])
+  ],
+  [
+    if test "$enableval" = "yes" || test "$enableval" = "no" ; then
+      AC_MSG_WARN(transfer buffer size defaulting to regular buffer size)
+      AC_DEFINE_UNQUOTED(PR_TUNABLE_BUFFER_SIZE, 1024,
+      [Default buffer size])
+    else
+      AC_DEFINE_UNQUOTED(PR_TUNABLE_BUFFER_SIZE, $enableval,
+      [Specified transfer buffer size])
+    fi
+  ])
+
 dnl Checks for libraries.  Yes, this is the hard way, but it's necessary.
 AC_CACHE_CHECK(for standalone crypt,pr_cv_lib_standalone_crypt,
   AC_TRY_LINK(,[crypt();],
@@ -634,8 +650,8 @@ fi
 AC_CHECK_HEADERS(ctype.h getopt.h crypt.h bstring.h limits.h)
 AC_CHECK_HEADERS(strings.h stropts.h)
 AC_CHECK_HEADERS(sys/types.h sys/mount.h sys/param.h sys/file.h sys/uio.h)
-AC_CHECK_HEADERS(netdb.h netinet/in.h netinet/tcp.h arpa/inet.h sys/stat.h)
-AC_CHECK_HEADERS(errno.h sys/socket.h sys/termios.h sys/termio.h)
+AC_CHECK_HEADERS(netdb.h netinet/in.h netinet/ip.h netinet/tcp.h arpa/inet.h)
+AC_CHECK_HEADERS(sys/stat.h errno.h sys/socket.h sys/termios.h sys/termio.h)
 AC_CHECK_HEADERS(sys/statvfs.h sys/vfs.h sys/select.h)
 AC_CHECK_HEADERS(dirent.h ndir.h sys/ndir.h sys/dir.h vmsdir.h)
 AC_CHECK_HEADERS(utmpx.h)
